Increased the gap of the top front page entry. Fixes #11

--- a/sites/all/themes/lackof/css/style.css
+++ b/sites/all/themes/lackof/css/style.css
@@ -137,6 +137,10 @@ body footer.footer a:active {
   border-bottom:1px solid #ddd;
 }
 
+.view-lack-of-front .views-row:first-child {
+  padding-top:10px;
+}
+
 .view-lack-of-front .views-field-picture {
   float:right;
 }
